--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Desktop.css">
+    <link rel="stylesheet" href="./Flip.css">
     <link rel="stylesheet" href="./Tablet.css">
     <link rel="stylesheet" href="./Mobile.css">
     <title>Flex-paractice</title>
@@ -50,16 +51,36 @@
                 <div class="text">People</div>
             </div>
             <div class="box7">
-                <div class="images">
-                    <img src="./Images/photos.png" alt="" />
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <div class="images">
+                                <img src="./Images/photos.png" alt="" />
+                            </div>
+                            <div class="text">Photos</div>
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>Photos</h1>
+                            <p>Photographer</p>
+                            <p>We love Nature</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="text">Photos</div>
             </div>
             <div class="box8">
-                <div class="imagesmini">
-                    <img src="./Images/maps.png" alt="" />
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <div class="imagesmini">
+                                <img src="./Images/maps.png" alt="" />
+                            </div>
+                            <div class="text">Maps</div>
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>Maps</h1>
+                        </div>
+                    </div>
                 </div>
-                <div class="text">Maps</div>
             </div>
             <div class="box9">
                 <div class="imagesmini">
@@ -114,10 +135,16 @@
                 <div class="text">Desktop</div>
             </div>
             <div class="box17">
-                <div class="images">
-                    <img src="./Images/weather.png" alt="" />
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <div class="images">
+                                <img src="./Images/weather.png" alt="" />
+                            </div>
+                            <div class="text">Weather</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="text">Weather</div>
             </div>
             <div class="box18">
                 <div class="images">
