Flip Card and some other changes

--- a/public/index.html
+++ b/public/index.html
@@ -1,171 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Desktop.css">
-    <link rel="stylesheet" href="./Flip.css">
-    <link rel="stylesheet" href="./Tablet.css">
-    <link rel="stylesheet" href="./Mobile.css">
+    <link rel="stylesheet" href="./Desktop.css" />
+    <link rel="stylesheet" href="./Flip.css" />
     <title>Flex-paractice</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="main">
-        <div class="container1">
-            <div class="box1">
+      <div class="container1">
+        <div class="box1 B230">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/mail.png" alt="" />
+                  <img src="./Images/mail.png" alt="" />
                 </div>
                 <div class="text">Mail</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Accounts</h1>
+                <p>We love professional Mails</p>
+              </div>
             </div>
-            <div class="box2">
+          </div>
+        </div>
+        <div class="box2 B520">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/calendar.png" alt="" />
+                  <img src="./Images/calendar.png" alt="" />
                 </div>
                 <div class="text">Calender</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Dates</h1>
+                <p>Have A Nice Day</p>
+              </div>
             </div>
-            <div class="box3">
+          </div>
+        </div>
+        <div class="box3 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/internet.png" alt="" />
+                  <img src="./Images/internet.png" alt="" />
                 </div>
                 <div class="text">Internet</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Internet Explorer</h3>
+              </div>
             </div>
-            <div class="box4">
+          </div>
+        </div>
+        <div class="box4 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/store.png" alt="" />
+                  <img src="./Images/store.png" alt="" />
                 </div>
                 <div class="text">Store</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Have a nice Day</h3>
+              </div>
             </div>
-            <div class="box5">
-                <div class="text">Eng</div>
-            </div>
+          </div>
         </div>
-        <div class="container2">
-            <div class="box6">
+        <div class="box5 B360">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <div class="textt">Eng</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container2">
+        <div class="box6 B360">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/people.png" alt="" />
+                  <img src="./Images/people.png" alt="" />
                 </div>
                 <div class="text">People</div>
+              </div>
             </div>
-            <div class="box7">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <div class="images">
-                                <img src="./Images/photos.png" alt="" />
-                            </div>
-                            <div class="text">Photos</div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h1>Photos</h1>
-                            <p>Photographer</p>
-                            <p>We love Nature</p>
-                        </div>
-                    </div>
+          </div>
+        </div>
+        <div class="box7 B230">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <div class="images">
+                  <img src="./Images/photos.png" alt="" />
                 </div>
+                <div class="text">Photos</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Photos</h1>
+                <p>Photographer</p>
+                <p>We love Nature</p>
+              </div>
             </div>
-            <div class="box8">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <div class="imagesmini">
-                                <img src="./Images/maps.png" alt="" />
-                            </div>
-                            <div class="text">Maps</div>
-                        </div>
-                        <div class="flip-card-back">
-                            <h1>Maps</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="box9">
+          </div>
+        </div>
+        <div class="box8 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/sky.png" alt="" />
+                  <img src="./Images/maps.png" alt="" />
+                </div>
+                <div class="text">Maps</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Maps</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="box9 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <div class="imagesmini">
+                  <img src="./Images/sky.png" alt="" />
                 </div>
                 <div class="text">Sky View</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Sky view</h3>
+              </div>
             </div>
-            <div class="box10">
+          </div>
+        </div>
+        <div class="box10 B520">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/travel.png" alt="" />
+                  <img src="./Images/travel.png" alt="" />
                 </div>
                 <div class="text">Travel</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Travels</h1>
+                <p>I Love Travleing</p>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="container3">
-            <div class="box11">
+      </div>
+      <div class="container3">
+        <div class="box11 B520">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/messaging.png" alt="" />
+                  <img src="./Images/messaging.png" alt="" />
                 </div>
                 <div class="text">Messaging</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Message Me</h1>
+                <p>What is Your Name</p>
+              </div>
             </div>
-            <div class="box12">
+          </div>
+        </div>
+        <div class="box12 B360">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/finance.png" alt="" />
+                  <img src="./Images/finance.png" alt="" />
                 </div>
                 <div class="text">Finance</div>
+              </div>
             </div>
-            <div class="box13">
+          </div>
+        </div>
+        <div class="box13 B230">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/sports.png" alt="" />
+                  <img src="./Images/sports.png" alt="" />
                 </div>
                 <div class="text">Sports</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Sports</h1>
+                <p>Cricket is the best game</p>
+              </div>
             </div>
-            <div class="box14">
+          </div>
+        </div>
+        <div class="box14 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/game.png" alt="" />
+                  <img src="./Images/game.png" alt="" />
                 </div>
                 <div class="text">Games</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Play Games</h3>
+              </div>
             </div>
-            <div class="box15">
+          </div>
+        </div>
+        <div class="box15 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/camera.png" alt="" />
+                  <img src="./Images/camera.png" alt="" />
                 </div>
                 <div class="text">Camera</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Nice Pic</h3>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="container4">
-            <div class="box16">
+      </div>
+      <div class="container4">
+        <div class="box16 B230">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/desktop.png" alt="" />
+                  <img src="./Images/desktop.png" alt="" />
                 </div>
                 <div class="text">Desktop</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Desktop</h1>
+                <p>How can I help You</p>
+              </div>
             </div>
-            <div class="box17">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <div class="images">
-                                <img src="./Images/weather.png" alt="" />
-                            </div>
-                            <div class="text">Weather</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="box18">
+          </div>
+        </div>
+        <div class="box17 B520">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="images">
-                    <img src="./Images/news.png" alt="" />
+                  <img src="./Images/weather.png" alt="" />
+                </div>
+                <div class="text">Weather</div>
+              </div>
+              <div class="flip-card-back">
+                <h1>Weather</h1>
+                <p>I like Moon soon</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="box18 B360">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <div class="images">
+                  <img src="./Images/news.png" alt="" />
                 </div>
                 <div class="text">News</div>
+              </div>
             </div>
-            <div class="box19">
+          </div>
+        </div>
+        <div class="box19 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/music.png" alt="" />
+                  <img src="./Images/music.png" alt="" />
                 </div>
                 <div class="text">Music</div>
+              </div>
+              <div class="flip-card-back">
+                <h2>Recite the Holy Quran</h2>
+              </div>
             </div>
-            <div class="box20">
+          </div>
+        </div>
+        <div class="box20 same">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
                 <div class="imagesmini">
-                    <img src="./Images/video.png" alt="" />
+                  <img src="./Images/video.png" alt="" />
                 </div>
                 <div class="text">Video</div>
+              </div>
+              <div class="flip-card-back">
+                <h3>Nice video</h3>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
