Tablet Version added

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                 <div class="imagesmini">
                   <img src="./Images/sky.png" alt="" />
                 </div>
-                <div class="text">Sky View</div>
+                <div class="text">Sky</div>
               </div>
               <div class="flip-card-back">
                 <h3>Sky view</h3>
@@ -174,7 +174,7 @@
                 <div class="text">Messaging</div>
               </div>
               <div class="flip-card-back">
-                <h1>Message Me</h1>
+                <h3>Message Me</h3>
                 <p>What is Your Name</p>
               </div>
             </div>
@@ -294,7 +294,7 @@
                 <div class="text">Music</div>
               </div>
               <div class="flip-card-back">
-                <h2>Recite the Holy Quran</h2>
+                <h4>Recite the Holy Quran</h4>
               </div>
             </div>
           </div>
